--- a/_config/config.yml
+++ b/_config/config.yml
@@ -4,7 +4,9 @@ After: 'framework/*','cms/*'
 ---
 LeftAndMain:
   extra_requirements_javascript:
-    - 'fancy-devvuild/javascript/LeftAndMain.Fancy-devbuild.js'
+    - 'fancy-devbuild/javascript/LeftAndMain.Fancy-devbuild.js'
+  extra_requirements_css:
+    - 'fancy-devbuild/css/fancydevbuild.css'
 ContentController:
   extensions:
     - FancyDevBuild
