--- a/.gitattributes
+++ b/.gitattributes
@@ -3,6 +3,6 @@
 /.editorconfig export-ignore
 /config.rb export-ignore
 /gulpfile.js export-ignore
-/package.js export-ignore
+/package.json export-ignore
 /scss export-ignore
 *.map export-ignore
